GUI description for GnuTLS "SECURE256" setting is misleading
Currently, the GUI description for configuring the GnuTLS to use the "SECURE256" priority string claims that this setting "prioritizes" 256 bit ciphers while it actually requires 256 bit ciphers and excludes 128 bit ciphers. I've noticed the issue specifically with VLC 3.0.8, but looking at the source code, it seems that all versions from 1.2.0 to the current master branch are affected.
I've attached a simple but untested preliminary patch. Note that this only changes the string(s) in modules/misc/gnutls.c but leaves the i18n stuff in files untouched, so additional work would be required here.