gnutls: fix priority descriptions (fixes #22775)